feat: seemingly working approach for leveraging .describe() to anchor schemas so we can build the components/schemas automatically
